--- a/src/app/product-recent/product-recent.component.css
+++ b/src/app/product-recent/product-recent.component.css
@@ -21,3 +21,9 @@
 .container{
     margin-bottom: 30px;
 }
+
+.owl-carousel{
+    display: flex !important;  
+    flex-direction: row;   
+    justify-content: left; 
+}
