--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,8 +1,10 @@
 <!-- Main Container -->
 <section class="main-container col1-layout">
     <div class="main container">
-      <div class="col-main">
-        <div class="cart">
+      <div class="">
+        <div class="cart"> 
+          <div class="row">
+            <div class="col-md-8 col-xs-12">
           <div class="cart-products inline">
             <div class="cart-process">
               <div class="process active"><span>1. Chọn sản phẩm</span></div>
@@ -94,8 +96,9 @@
                 </div>
               </div>
             </div>
-           
           </div>
+          </div>
+          <div class="right sidebar col-md-4 col-xs-12">
           <div class="cart-total-prices">
             <div class="cart-prices">
               <div class="title2">THÔNG TIN GIỎ HÀNG</div>
@@ -164,8 +167,9 @@
           </div>
         </div>
       </div>
+      </div>
     </div>
-    
+  </div>
   <div class="container">
     <div class="home-tab">
     <div class="block__header">
