--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -18,7 +18,7 @@
   <section class="main-container col2-right-layout">
     <div class="main container">
       <div class="row">
-        <div class="col-main col-sm-8 col-xs-12">
+        <div class="col-main col-md-8 col-xs-12">
           <div class="cart-products inline">
             <div class="cart-process">
               <div class="process active"><span>1. Chọn sản phẩm</span></div>
@@ -125,7 +125,7 @@
             </form>
           </div>
           </div>
-        <aside class="right sidebar col-sm-4 col-xs-12">
+        <aside class="right sidebar col-md-4 col-xs-12">
           <div class="cart-total-prices">
             <div class="cart-prices">
               <div class="title2">THÔNG TIN GIỎ HÀNG</div>
