--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -21,9 +21,9 @@
         <div class="col-main col-md-8 col-xs-12">
           <div class="cart-products inline">
             <div class="cart-process">
-              <div class="process active"><span>1. Chọn sản phẩm</span></div>
-              <div class="process active"><span>2. Xác nhận đơn hàng</span></div>
-              <div class="process active"><span>3. Thanh toán</span></div>
+              <div class="process active"><span>Chọn sản phẩm</span></div>
+              <div class="process active"><span>Xác nhận đơn hàng</span></div>
+              <div class="process active"><span>Thanh toán</span></div>
             </div>
             <div *ngIf="getItemCart().length == 0">Bạn đang không có sản phẩm nào trong giỏ hàng.</div>
             <form id="formdathang" method="post" action="" class="form-checkout" *ngIf="getItemCart().length > 0">
