--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -7,9 +7,9 @@
             <div class="col-md-8 col-xs-12">
           <div class="cart-products inline">
             <div class="cart-process">
-              <div class="process active"><span>1. Chọn sản phẩm</span></div>
-              <div class="process active"><span>2. Xác nhận đơn hàng</span></div>
-              <div class="process"><span>3. Thanh toán</span></div>
+              <div class="process active"><span>Chọn sản phẩm</span></div>
+              <div class="process active"><span>Xác nhận đơn hàng</span></div>
+              <div class="process"><span>Thanh toán</span></div>
             </div>
             <div class="cart-header">
               <div class="title2">THÔNG TIN SẢN PHẨM</div>
