--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -203,7 +203,7 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-md-12 text-center">
+      <div class="col-md-12 text-center div-view-extra ">
         <a [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 2}" class="but_medium2"><i class="fa fa-shopping-cart"></i>&nbsp; XEM THÊM</a>
       </div>
     </div>
@@ -291,7 +291,7 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-md-12 text-center">
+      <div class="col-md-12 text-center div-view-extra ">
         <a [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 3}" class="but_medium2"><i class="fa fa-shopping-cart"></i>&nbsp; XEM THÊM</a>
       </div>
     </div>
@@ -385,7 +385,7 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-md-12 text-center">
+      <div class="col-md-12 text-center div-view-extra ">
         <a [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 4}" class="but_medium2"><i class="fa fa-shopping-cart"></i>&nbsp; XEM THÊM</a>
       </div>
     </div>
@@ -418,7 +418,7 @@
     </div>
    </div>
     <div class="row">
-      <div class="col-md-12 col-xs-12">
+      <div class="col-md-12 col-xs-12 div-view-extra-bottom">
         <div class="our-clients">
           <div class="slider-items-products">
             <div id="our-clients-slider" class="product-flexslider hidden-buttons">
